# page-eyes-agent

./: .code.yml  .env.example  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
OmniParser2/: .dockerignore  .env.sample  .gitignore  Dockerfile  OCR.yaml  README.md  config.py  main.py  pm2.config.json  pyproject.toml
OmniParser2/core/: __init__.py  handler.py  parse.py
OmniParser2/model/: __init__.py  icon_captioner.py  icon_detector.py  overlay_detector.py
OmniParser2/model/weights/icon_caption_finetune/: README.md  adapter_config.json  adapter_model.safetensors  optimizer_scheduler.pt  processing_florence2.py  tokenizer.json  training_state.json
OmniParser2/model/weights/overlay_detect/: model.pt
OmniParser2/routers/: __init__.py  health.py
OmniParser2/routers/omni/: __init__.py  deps.py
OmniParser2/schemas/: omni.py
OmniParser2/tests/: conftest.py  pytest.ini  test_icon_recognition.py  test_mobile_agent.py  test_ocr.py
OmniParser2/util/: __init__.py  context.py  cos.py  image.py  image_similarity.py  image_vector_storage.py  label_annotator.py  logger.py  middleware.py  response.py  storage.py  timer.py
about/acknowledgements/: index.html
about/license/: index.html
about/team/: index.html
api/: index.html
api/advanced/: index.html
api/module-a/: index.html
api/module-b/: index.html
article/LLM 下半场是“行动”：基于 Pydantic AI + OmniParser 从零打造 GUI Agent/: index.html
article/基于AI的UI自动化提效：PageEyes Agent应用探索/: index.html
article/基于AI的UI自动化提效：PageEyes Agent应用探索/img/: 体验视频.webm
article/给视觉感知加一道哨兵：YOLO在GUI Agent中的浮层态检测实践 /: index.html
article/视觉大模型驱动的页面异常检测：突破传统视觉方法瓶颈/: index.html
article/让图标识别“可交付”：Florence-2 模型在GUI Agent中的微调实践/: index.html
changelog/: index.html
contributing/: index.html
contributing/code-style/: index.html
contributing/dev-env/: index.html
docs/: README.md  changelog.md  feat-electron.md  index.md  roadmap.md  security.md
docs/PageEyes Agent 应用探索/: article01.md
docs/about/: license.md
docs/article/LLM 下半场是“行动”：基于 Pydantic AI + OmniParser 从零打造 GUI Agent/: README.md
docs/article/基于AI的UI自动化提效：PageEyes Agent应用探索/: README.md
docs/article/给视觉感知加一道哨兵：YOLO在GUI Agent中的浮层态检测实践 /: README.md
docs/article/视觉大模型驱动的页面异常检测：突破传统视觉方法瓶颈/: README.md
docs/article/让图标识别“可交付”：Florence-2 模型在GUI Agent中的微调实践/: README.md
docs/contributing/: code-style.md  dev-env.md  index.md
docs/docs/: index.md
docs/docs/api/: module-a.md  module-b.md
docs/docs/contributing/: dev-env.md
docs/faq/: faq.md  troubleshooting.md
docs/getting-started/: demo.md  index.md  installation.md
docs/guides/: best-practices.md
docs/related/: integrations.md  tools.md
docs/stylesheets/: extra.css
docs/tutorials/: examples.md  quickstart.md
docs/基于AI的UI自动化提效：PageEyes Agent应用探索/: README.md  article01.md
docs/视觉大模型驱动的页面异常检测：突破传统视觉方法瓶颈/: README.md
examples/: ios_agent_example.py
faq/faq/: index.html
faq/troubleshooting/: index.html
feat-electron/: index.html
getting-started/: index.html
getting-started/demo/: index.html
getting-started/installation/: index.html
guides/best-practices/: index.html
guides/core-concepts/: index.html
guides/use-cases/: index.html
ieyes_agent/: __init__.py  agent.py  deps.py  device.py  prompt.py  report_template.html  tools.py
ieyes_agent/util/: adb_tool.py  platform.py
related/integrations/: index.html
related/tools/: index.html
roadmap/: index.html
search/: search_index.json
security/: index.html
skills/gui-popup-handler/: SKILL.md
src/ieyes_agent/: __init__.py  agent.py  config.py  deps.py  device.py  prompt.py  report_template.html  tools.py
src/ieyes_agent/util/: adb_tool.py  cos.py  platform.py  storage.py
src/ieyes_agent/util/js_tool/: __init__.py  script.js
src/page_eyes/: __init__.py  agent.py  config.py  deps.py  device.py  prompt.py  report_template.html  tools.py  tools_bak.py
src/page_eyes/skills/gui-popup-handler/: SKILL.md
src/page_eyes/tools/: __init__.py  _base.py  _mobile.py  android.py  base.py  electron.py  harmony.py  ios.py  mobile.py  web.py
src/page_eyes/util/: __init__.py  adb_tool.py  hdc_tool.py  storage.py  wda_tool.py
src/page_eyes/util/js_tool/: __init__.py  script.js
tests/: conftest.py  main.py  pytest.ini  test_agent_skill.py  test_android_agent.py  test_electron_agent.py  test_harmony_agent.py  test_ios_agent.py  test_mobile_agent.py  test_planning_agent.py  test_web_agent.py
tests/skills/pydanticai-docs/: SKILL.md
tutorials/examples/: index.html
tutorials/quickstart/: index.html
