[project]
name = "ieyes-agent"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aidenmo", email = "aidenmo@tencent.com" }
]
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.8.10",
    "cos-python-sdk-v5>=1.9.38",
    "esprima2>=5.0.0",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "openai>=1.92.2",
    "playwright>=1.52.0",
    "pydantic-ai>=0.2.6",
]

classifiers = [
   # 这个项目的成熟度如何？常见的值有：
   #   3 - Alpha
   #   4 - Beta
   #   5 - 生产/稳定版
   "Development Status :: 4 - Beta",

   # 指明你的项目面向的对象
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Build Tools",

   # 在这里指定你支持的 Python 版本。
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "docs",
    "tests"
]

[[tool.uv.index]]
# 腾讯镜像源，同步自pypi
url = "https://mirrors.tencent.com/pypi/simple"
name = "mirrors_pypi"
default = true

[[tool.uv.index]]
# 腾讯镜像源，同步自pypi
url = "https://mirrors.tencent.com/repository/pypi/tencent_pypi/simple"
name = "tencent_pypi"
publish-url = "https://mirrors.tencent.com/repository/pypi/tencent_pypi/simple"


